# neph

./: .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.example.yml  pyproject.toml  sphinx_config.py
.github/workflows/: publish.yml
dockerfiles/: cdc.dockerfile  jupyterlab.dockerfile  neo4j.dockerfile  simulator.dockerfile  steampipe.dockerfile
dockerfiles/jupyter/: queries.md
dockerfiles/simulator/: package.json  src.ts
dockerfiles/steampipe/: aws.spc  entrypoint.sh  workspace.spc.example
docs/: Cli.md  Collection.md  Jupyter.md  Overview.md  Plugins.md  Queries.md  Quickstart.md  README.md  Simulator.md  Triggers.md
ingest_scripts/: README.md  orgpol_exporter.sh  sso_exporter.sh
test/: test_awspolicies.py  test_simconditions.py
test/simresults/: test_allow_nosuggestions_1.json  test_explicitdeny_valuedict_1.json  test_implicitdeny_allowcondition_valuedict_1.json  test_implicitdeny_allowcondition_valuelist_1.json
testdata/: README.md  role_1.jsonl
